Fixed Some issue and merged 2 commit from parents repo

--- a/playground/index.html
+++ b/playground/index.html
@@ -97,7 +97,10 @@
         </div>
 
         <div class="w-full flex justify-between items-center mt-6">
-          <a href="https://github.com/upjs/facile-validator" class="text-base text-amber-500 animate animate-pulse">
+          <a
+            href="https://github.com/fojlerabbirabib/facile-validator"
+            class="text-base text-amber-500 animate animate-pulse"
+          >
             ⭐️ Star on Github
           </a>
           <button
@@ -116,7 +119,7 @@
 
     <footer class="flex items-center justify-center py-4 px-3 space-x-1 sm:space-x-3 text-xs sm:text-base">
       <a
-        href="https://github.com/upjs/facile-validator"
+        href="https://github.com/fojlerabbirabib/facile-validator"
         target="_blank"
         title="Github"
         class="hover:text-primary transition-all"
@@ -124,7 +127,7 @@
       >
       <span class="text-gray-400">•</span>
       <a
-        href="https://github.com/upjs/facile-validator/blob/main/README.md"
+        href="https://github.com/fojlerabbirabib/facile-validator/blob/main/README.md"
         target="_blank"
         class="hover:text-primary transition-all"
         >Documentation [EN]</a
@@ -138,7 +141,7 @@
       >
       <span class="text-gray-400">•</span>
       <a
-        href="https://www.npmjs.com/package/@upjs/facile-validator"
+        href="https://www.npmjs.com/package/@fojlerabbirabib/facile-validator"
         title="NPM JS"
         target="_blank"
         class="hover:text-primary transition-all"
